Added List of services

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Deliverable 3</title>
 </head>
 <body>
-    
+    <ul>
+        <li><b>Services</b></li>
+        <li>Web Design</li>
+        <li>App Design</li>
+        <li>Consulting</li>
+        <li>Logo Design</li>
+    </ul>
 </body>
 </html>
