--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deliverable 3</title>
+    <link ref="stylesheet" href="styles.css" />
 </head>
 <body>
+    <nav></nav>
     <ul>
-        <li><b>Services</b></li>
+        <li><b class="b">Services</b></li>
         <li>Web Design</li>
         <li>App Design</li>
         <li>Consulting</li>
