Changed services to GUI Design

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav></nav>
     <ul>
-        <li><b class="b">Services</b></li>
+        <li><b class="b">GUI Design</b></li>
         <li>Web Design</li>
         <li>App Design</li>
         <li>Consulting</li>
