--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <link ref="stylesheet" href="styles.css" />
 </head>
 <body>
-    <nav></nav>
+    <nav>
+        <a href="#">Go to Services</a>
+        <a href="#">Go to Web Design page</a>
+        <a href="#">Got to App Design page</a>
+        <a href="#">Go to Consulting page</a>
+        <a href="#">Go to Logo Design</a>
+    </nav>
     <ul>
-        <li><b class="b">GUI Design</b></li>
+        <li><b class="b">Services</b></li>
         <li>Web Design</li>
         <li>App Design</li>
         <li>Consulting</li>
