--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-    <nav></nav>
+    <nav><a href="#"><image href="icon.svg" class="logo" alt="Logo Icon"></image></a><a href="#">About</a><a href="#">Mission</a><a href="#">Services</a></nav>
     <ul>
-        <li><b class="b">GUI Design</b></li>
+        <li><b class="b">Services</b></li>
         <li>Web Design</li>
         <li>App Design</li>
         <li>Consulting</li>
