made a few chnages

--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-    <nav><a href="#"><image href="icon.svg" class="logo" alt="Logo Icon"></image></a><a href="#">About</a><a href="#">Mission</a><a href="#">Services</a></nav>
+    <nav><a href="#">
+        <image href="icon.svg" class="logo" alt="Logo Icon"> 
+        </image></a>
+        <a href="#">About</a>
+        <a href="#">Mission</a>
+        <a href="#">Services</a></nav>
+
     <ul>
-        <li><b class="b">GUI Design</b></li>
-        <li>Web Design</li>
-        <li>App Design</li>
-        <li>Consulting</li>
-        <li>Logo Design</li>
+        <li><b class="b">Services</b></li>
+        <li><a href="WebDesign.html">Web Design</a>Web Design</li>
+        <li><a href="AppDesign.html">App Design</a>App Design</li>
+        <li><a href="Consulting.html"></a>Consulting</li>
+        <li><a href="LogoDesign">Logo Design</a>Logo Design</li>
     </ul>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
     <script src="goo.js"></script>
