--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
     <nav><a href="#"><image href="icon.svg" class="logo" alt="Logo Icon"></image></a><a href="#">About</a><a href="#">Mission</a><a href="#">Services</a></nav>
-    <ul>
-        <li><b class="b">GUI Design</b></li>
-        <li>Web Design</li>
-        <li>App Design</li>
-        <li>Consulting</li>
-        <li>Logo Design</li>
-    </ul>
+    <div class="services">
+        <span><b class="b">GUI Design</b></span>
+        <span>Web Design</span>
+        <span>App Design</span>
+        <span>Consulting</span>
+        <span>Logo Design</span>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
     <script src="goo.js"></script>
 </body>
