--- a/index.html
+++ b/index.html
@@ -9,12 +9,27 @@
 </head>
 <body>
     <nav><a href="#"><image href="icon.svg" class="logo" alt="Logo Icon"></image></a><a href="#">About</a><a href="#">Mission</a><a href="#">Services</a></nav>
-    <div class="services">
-        <span><b class="b">GUI Design</b></span>
-        <span>Web Design</span>
-        <span>App Design</span>
-        <span>Consulting</span>
-        <span>Logo Design</span>
+    <div class= "services">
+        <span><b class="b">
+            <a href="Services.html">
+                Services
+            </a></b></span>
+        <span> <b class="b">
+            <a href="WebDesign.html">
+                Web Design
+            </a></b></span>
+        <span><b class="b">
+            <a href="AppDesign.html">
+                App Design
+            </a></b></span>
+        <span><b class="b">
+            <a href="Consulting.html">
+                Consulting
+            </a></b></span>
+        <span><b class="b">
+            <a href="LogoDesign.html">
+                Logo Design
+            </a></b></span>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
     <script src="goo.js"></script>
