--- a/index.html
+++ b/index.html
@@ -10,11 +10,21 @@
 <body>
     <nav><a href="#"><image href="icon.svg" class="logo" alt="Logo Icon"></image></a><a href="#">About</a><a href="#">Mission</a><a href="#">Services</a></nav>
     <div class="services">
-        <span><b class="b">GUI Design</b></span>
-        <span>Web Design</span>
-        <span>App Design</span>
-        <span>Consulting</span>
-        <span>Logo Design</span>
+        <span><b class="b"><a href="#">
+            Services
+        </a></b></span>
+        <span><b class="b"><a href="#">
+            Web Design
+        </b></a></span>
+        <span><b class="b"><a href="#"></a>
+            App Design
+        </b></a></span>
+        <span><b class="b"><a href="#">
+            Consulting
+        </b></a></span>
+        <span><b class="b"><a href="#">
+            Logo Design
+        </b></a></span>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
     <script src="goo.js"></script>
