felt like it was better for the image to be seperate from the txt so we could access them indiviudually. Hopefully I did it right

--- a/index.html
+++ b/index.html
@@ -8,23 +8,27 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-    <nav><a href="#"><image href="icon.svg" class="logo" alt="Logo Icon"></image></a><a href="#">About</a><a href="#">Mission</a><a href="#">Services</a></nav>
+    <img class= "logo" src="GUI_BOYZ_LOGO.png" alt="Logo Icon">
+    <nav class="a">
+    <a href="#">About</a>
+    <a href="#">Mission</a>
+    <a href="#">Services</a></nav>
     <div class="services">
         <span><b class="b"><a href="#">
             Services
         </a></b></span>
         <span><b class="b"><a href="#">
             Web Design
-        </b></a></span>
-        <span><b class="b"><a href="#"></a>
+        </a></b></span>
+        <span><b class="b"><a href="#">
             App Design
-        </b></a></span>
+        </a></b></span>
         <span><b class="b"><a href="#">
             Consulting
-        </b></a></span>
+        </a></b></span>
         <span><b class="b"><a href="#">
             Logo Design
-        </b></a></span>
+        </a></b></span>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
     <script src="goo.js"></script>
