made a few chnages and tested some stuff out. Trying to figure out how to move the top text up higher

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <img class= "logo" src="GUI_BOYZ_LOGO.png" alt="Logo Icon">
-    <nav class="a">
+    <nav class="na">
     <a href="#">About</a>
     <a href="#">Mission</a>
     <a href="#">Services</a></nav>
