moved the nav inside the bar

--- a/index.html
+++ b/index.html
@@ -9,26 +9,33 @@
 </head>
 <body>
     <img class= "logo" src="GUI_BOYZ_LOGO.png" alt="Logo Icon">
+    <div>
     <nav class="na">
-    <a href="#">About</a>
-    <a href="#">Mission</a>
-    <a href="#">Services</a></nav>
+    <a href="#">
+        About
+    </a>
+    <a href="#">
+        Mission
+    </a>
+    <a href="#">
+        Services
+    </a></nav></div>
     <div class="services">
-        <span><b class="b"><a href="#">
+        <span class="b"><a href="#">
             Services
-        </a></b></span>
-        <span><b class="b"><a href="#">
+        </a></span>
+        <span class="b"><a href="#">
             Web Design
-        </a></b></span>
-        <span><b class="b"><a href="#">
+        </a></span>
+        <span class="b"><a href="#">
             App Design
-        </a></b></span>
-        <span><b class="b"><a href="#">
+        </a></span>
+        <span class="b"><a href="#">
             Consulting
-        </a></b></span>
-        <span><b class="b"><a href="#">
+        </a></span>
+        <span class="b"><a href="#">
             Logo Design
-        </a></b></span>
+        </a></span>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
     <script src="goo.js"></script>
