made a few chnages to try and make each text its own so we could move it around the logo in the middle

--- a/index.html
+++ b/index.html
@@ -21,19 +21,18 @@
         Services
     </a></nav></div>
     <div class="services">
-        <span class="b"><a href="#">
+        <span class="s"><a href="#">
             Services
         </a></span>
-        <span class="b"><a href="#">
+        <span class="w"><a href="#">
             Web Design
         </a></span>
-        <span class="b"><a href="#">
+        <span class="a"><a href="#">
             App Design
         </a></span>
-        <span class="b"><a href="#">
+        <span class="c"><a href="#">
             Consulting
-        </a></span>
-        <span class="b"><a href="#">
+        </a></span class="l"><a href="#">
             Logo Design
         </a></span>
     </div>
