--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         </a></span>
         <span class="c"><a href="#">
             Consulting
-        </a></span class="l"><a href="#">
+        </a></span>
+        <span class="l"><a href="#">
             Logo Design
         </a></span>
     </div>
