going to add middle logo

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <a href="#">
         Services
     </a></nav></div>
+    <hr>
+    <img class= "logo" src="GUI_BOYZ_LOGO.png" alt="Logo Icon">
+    <hr>
     <div class="services">
         <span class="s"><a href="#">
             Services
