--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 </head>
 <body>
     <img class= "logo" src="GUI_BOYZ_LOGO.png" alt="Logo Icon">
-    <div>
     <nav class="na">
     <a href="#">
         About
@@ -19,10 +18,8 @@
     </a>
     <a href="#">
         Services
-    </a></nav></div>
-    <hr>
+    </a></nav>
     <img class= "logo" src="GUI_BOYZ_LOGO.png" alt="Logo Icon">
-    <hr>
     <div class="services">
         <span class="s"><a href="#">
             Services
@@ -38,8 +35,7 @@
         </a></span>
         <span class="l"><a href="#">
             Logo Design
-        </a></span>
-    </div>
+        </a></span></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
     <script src="goo.js"></script>
 </body>
