--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <a href="#">
         Services
     </a></nav>
-    <img class= "logo" src="GUI_BOYZ_LOGO.png" alt="Logo Icon">
-    <div class="services">
+    <div class="services"> <img class= "page" src="GUI_BOYZ_LOGO.png" heignt= "300" width="300" alt="Logo Icon">
         <span class="s"><a href="#">
             Services
         </a></span>
