Changed some CSS

--- a/index.html
+++ b/index.html
@@ -8,17 +8,13 @@
     <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-    <img class= "logo" src="GUI_BOYZ_LOGO.png" alt="Logo Icon">
-    <nav class="na">
-    <a href="#">
-        About
-    </a>
-    <a href="#">
-        Mission
-    </a>
-    <a href="#">
-        Services
-    </a></nav>
+    
+    <nav class="">
+        <a href="#"><img class= "logo" src="GUI_BOYZ_LOGO.png" alt="Logo Icon"></a>
+        <a href="#">About</a>
+        <a href="#">Mission</a>
+        <a href="#">Services</a>
+    </nav>
     <div class="services"> <img class= "page" src="GUI_BOYZ_LOGO.png" heignt= "300" width="300" alt="Logo Icon">
         <span class="s"><a href="#">
             Services
