--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
         <a href="#">Services</a>
     </nav>
     <div class="services"> <img class= "page" src="GUI_BOYZ_LOGO.png" heignt= "500" width="500" alt="Logo Icon">
-        <span class="b"><a href="#">
+        <span class="s"><a href="#">
             Services
         </a></span>
-        <span class="b"><a href="#">
+        <span class="w"><a href="#">
             Web Design
         </a></span>
-        <span class="b"><a href="#">
+        <span class="a"><a href="#">
             App Design
         </a></span>
-        <span class="b"><a href="#">
+        <span class="c"><a href="#">
             Consulting
         </a></span>
-        <span class="b"><a href="#">
+        <span class="l"><a href="#">
             Logo Design
         </a></span></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
