--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             Logo Design
         </a></span></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
+    <script src="drop.js"></script>
     <script src="goo.js"></script>
 </body>
 </html>
