--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="#">Services</a>
     </nav>
     <div class="services"> <img class= "page" src="GUI_BOYZ_LOGO.png" heignt= "500" width="500" alt="Logo Icon">
+        <button>
         <span class="b"><a href="#">
             Services
         </a></span>
@@ -30,7 +31,7 @@
         </a></span>
         <span class="b"><a href="#">
             Logo Design
-        </a></span></div>
+        </a></span></button></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
     <script src="goo.js"></script>
 </body>
