--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <a href="#">Mission</a>
         <a href="#">Services</a>
     </nav>
-    <div class="services"> <img class= "page" src="GUI_BOYZ_LOGO.png" heignt= "500" width="500" alt="Logo Icon">
-        <button>
+    <div class="services"> <img class= "page" src="GUI_BOYZ_LOGO.png" heignt= "800" width="800" alt="Logo Icon">
+        <button class="button">
         <span class="b"><a href="#">
             Services
         </a></span>
