made navigation bar a div so we can move it by itself w.o the logo icon

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 </head>
 <body>
     
-    <nav class="">
+    <nav>
         <a href="#"><img class= "logo" src="GUI_BOYZ_LOGO.png" alt="Logo Icon"></a>
-        <a href="#">About</a>
-        <a href="#">Mission</a>
-        <a href="#">Services</a>
+        <div class="na">
+            <a href="#">About</a>
+            <a href="#">Mission</a>
+            <a href="#">Services</a>
+        </div>
     </nav>
     <div class="services"> <img class= "page" src="GUI_BOYZ_LOGO.png" heignt= "800" width="800" alt="Logo Icon">
         <button class="button">
