--- a/index.html
+++ b/index.html
@@ -1,41 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Deliverable 3</title>
-    <link rel="stylesheet" href="styles.css"/>
-</head>
-<body>
-    
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <nav>
-        <a href="#"><img class= "logo" src="GUI_BOYZ_LOGO.png" alt="Logo Icon"></a>
-        <div class="na">
-            <a href="#">About</a>
-            <a href="#">Mission</a>
-            <a href="#">Services</a>
-        </div>
+      <a href="#">
+        <img class="logo" src="GUI_BOYZ_LOGO.png" alt="Logo Icon" />
+      </a>
+      <div class="na">
+        <a href="#">About</a>
+        <a href="#">Mission</a>
+        <a href="#">Services</a>
+      </div>
     </nav>
-    <div class="services"> <img class= "page" src="GUI_BOYZ_LOGO.png" heignt= "800" width="800" alt="Logo Icon">
-        <button class="button">
-        <span class="b"><a href="#">
-            Services
-        </a></span>
-        <span class="b"><a href="#">
-            Web Design
-        </a></span>
-        <span class="b"><a href="#">
-            App Design
-        </a></span>
-        <span class="b"><a href="#">
-            Consulting
-        </a></span>
-        <span class="b"><a href="#">
-            Logo Design
-        </a></span></button></div>
+    <div>
+      <img
+        class="main-logo"
+        src="GUI_BOYZ_LOGO.png"
+        heignt="800"
+        width="800"
+        alt="Logo Icon"
+      />
+    </div>
+    <hr />
+    <div class="services">
+      <div class="services-container">
+        <span class=""><a href="#">Services</a></span>
+        <span class=""><a href="#">Web Design</a></span>
+        <span class=""><a href="#">App Design</a></span>
+        <span class=""><a href="#">Consulting</a></span>
+        <span class=""><a href="#">Logo Design</a></span>
+      </div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
     <script src="drop.js"></script>
     <script src="goo.js"></script>
-</body>
+  </body>
 </html>
