removed services link

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     <hr />
     <div class="services">
       <div class="services-container">
-        <span class=""><a href="#">Services</a></span>
-        <span class=""><a href="#">Web Design</a></span>
-        <span class=""><a href="#">App Design</a></span>
-        <span class=""><a href="#">Consulting</a></span>
-        <span class=""><a href="#">Logo Design</a></span>
+        <span><a href="#">Services</a></span>
+        <span><a href="#">Web Design</a></span>
+        <span><a href="#">App Design</a></span>
+        <span><a href="#">Consulting</a></span>
+        <span><a href="#">Logo Design</a></span>
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
