--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       />
     </div>
     <hr />
+    <p class="mission">"To design & create GUI."</p>
     <div class="services">
       <div class="services-container">
         <h3 class="title">Services</h3>
@@ -55,6 +56,7 @@
         </span>
       </div>
     </div>
+    <div class="footer">I AM A FOOTER!!!</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
     <script src="drop.js"></script>
     <script src="goo.js"></script>
