made a few changes but havent messed w/ main logo much

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav>
-      <img class="logo" src="GUI_BOYZ_LOGO.png" alt="Logo Icon" />
+      <img class="logo" src="GUI_boyz_Svg_Stroke.png" alt="Logo Icon" />
       <a href="#">About</a>
       <a href="#">Mission</a>
       <a href="#">Services</a>
@@ -26,26 +26,26 @@
     <hr />
     <div class="services">
       <div class="services-container">
-        <h3 class="title">Services</h3>
+        <h2 class="title">Services</h2>
         <p class="mission">"To design & create GUI."</p>
         <span class="service-card">
           <a href="#">
-            <div>Web Design</div>
+            <div><button class="box">Web Design</button></div>
           </a>
         </span>
         <span class="service-card">
           <a href="#">
-            <div>App Design</div>
+            <div><button class="box">Design</button></div>
           </a>
         </span>
         <span class="service-card">
           <a href="#">
-            <div>Consulting</div>
+            <div><button class="box">Consulting</button></div>
           </a>
         </span>
         <span class="service-card">
           <a href="#">
-            <div>Logo Design</div>
+            <div><button class="box">Logo Design</button></div>
           </a>
         </span>
       </div>
