--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div>
       <img
         class="main-logo"
-        src="GUI_BOYZ_LOGO.png"
+        src="GUI_boyz_Svg_Stroke_Name.png"
         heignt="800"
         width="800"
         alt="Logo Icon"
