--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
     <nav>
       <img class="logo" src="GUI_boyz_Svg_Stroke.png" alt="Logo Icon" />
-      <a href="#">About</a>
-      <a href="#">Mission</a>
-      <a href="#">Services</a>
+      <a href="About/">About</a>
+      <a href="Mission/">Mission</a>
+      <a href="Services/">Services</a>
     </nav>
     <div>
       <img
@@ -29,22 +29,22 @@
         <h2 class="title">Services</h2>
         <p class="mission">"To design & create GUI."</p>
         <span class="service-card">
-          <a href="#">
+          <a href="Web Design/">
             <div><button class="box">Web Design</button></div>
           </a>
         </span>
         <span class="service-card">
-          <a href="#">
+          <a href="App Design/">
             <div><button class="box">App Design</button></div>
           </a>
         </span>
         <span class="service-card">
-          <a href="#">
+          <a href="Consulting/">
             <div><button class="box">Consulting</button></div>
           </a>
         </span>
         <span class="service-card">
-          <a href="#">
+          <a href="Logo Design/">
             <div><button class="box">Logo Design</button></div>
           </a>
         </span>
