--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         </span>
       </div>
     </div>
+    <div class="footer">I AM A FOOTER!!!</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
     <script src="drop.js"></script>
     <script src="goo.js"></script>
