--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
         <h3 class="title">Services</h3>
         <p class="mission">"To design & create GUI."</p>
         <span class="service-card">
-          <a href="#">
+          <a href="WebDesign.html">
             <div>Web Design</div>
           </a>
         </span>
         <span class="service-card">
-          <a href="#">
+          <a href="AppDesign.html">
             <div>App Design</div>
           </a>
         </span>
         <span class="service-card">
-          <a href="#">
+          <a href="Consulting.html">
             <div>Consulting</div>
           </a>
         </span>
         <span class="service-card">
-          <a href="#">
+          <a href="LogoDesign.html">
             <div>Logo Design</div>
           </a>
         </span>
