--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
   </head>
   <body>
     <nav>
-      <img class="logo" src="GUI_BOYZ_LOGO.png" alt="Logo Icon" />
+      <a href="#">
+        <img class="logo" src="GUI_BOYZ_LOGO.png" alt="Logo Icon" />
+      </a>
       <a href="#">About</a>
       <a href="#">Mission</a>
       <a href="#">Services</a>
+      <a href="ContactUs.html">Contact Us</a>
     </nav>
     <div>
       <img
