added Forum Page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <a href="#">Mission</a>
       <a href="#">Services</a>
       <a href="ContactUs.html">Contact Us</a>
+      <a href="testForum.html">Forum</a>
     </nav>
     <div>
       <img
