Added matts code

--- a/testForum.html
+++ b/testForum.html
@@ -22,10 +22,11 @@
             <h2>Discussion</h2>
             <ul>
                 <li>
-                    <h3><a href="#">This is a test for a forum post</a></h3>                        
-                    <p>Started by <span class="author">John Doe</span> on <span class="date">March 15, 2023</span></p>                    </li>
+                    <h3><a href="forumPostExample.html">This is a test for a forum post</a></h3>                        
+                    <p>Started by <span class="author">John Doe</span> on <span class="date">March 15, 2023</span></p>
+                </li>
                 <li>
-                    <h3><a href="#">This is a test for a forum post</a></h3>
+                    <h3><a href="forumPostExample.html">This is a test for a forum post</a></h3>
                     <p>Started by <span class="author">Jane Doe</span> on <span class="date">March 14, 2023</span></p>
                 </li>
             </ul>
@@ -34,11 +35,11 @@
             <h2>User Feedback</h2>
             <ul>
                 <li>
-                    <h3><a href="#">This is a test for a forum post</a></h3>
+                    <h3><a href="forumPostExample.html">This is a test for a forum post</a></h3>
                     <p>Started by <span class="author">John Doe</span> on <span class="date">March 15, 2023</span></p>
                 </li>
                 <li>
-                    <h3><a href="#">This is a test for a forum post</a></h3>
+                    <h3><a href="forumPostExample.html">This is a test for a forum post</a></h3>
                     <p>Started by <span class="author">Jane Doe</span> on <span class="date">March 14, 2023</span></p>
                 </li>
             </ul>
@@ -47,11 +48,11 @@
             <h2>Request Help</h2>
             <ul>
                 <li>
-                    <h3><a href="#">This is a test for a forum post</a></h3>
+                    <h3><a href="forumPostExample.html">This is a test for a forum post</a></h3>
                     <p>Started by <span class="author">John Doe</span> on <span class="date">March 15, 2023</span></p>
                 </li>
                 <li>
-                    <h3><a href="#">This is a test for a forum post</a></h3>
+                    <h3><a href="forumPostExample.html">This is a test for a forum post</a></h3>
                     <p>Started by <span class="author">Jane Doe</span> on <span class="date">March 14, 2023</span></p>
                 </li>
             </ul>
@@ -59,11 +60,11 @@
         <aside class="sidebar">
             <h2>Recent Activity</h2>
             <ul>
-                <li><a href="#">Thread Title</a> by John Doe</li>
-                <li><a href="#">Thread Title</a> by Jane Doe</li>
-                <li><a href="#">Thread Title</a> by John Doe</li>
+                <li><a href="forumPostExample.html">Thread Title</a> by John Doe</li>
+                <li><a href="forumPostExample.html">Thread Title</a> by Jane Doe</li>
+                <li><a href="forumPostExample.html">Thread Title</a> by John Doe</li>
             </ul>
-        </span>
+        </aside>
     </div>
     <div class="footer">I AM A FOOTER!!!</div>
 </body>
