--- a/ContactUs.html
+++ b/ContactUs.html
@@ -83,6 +83,17 @@
                   <span class="required"></span>
                 </span>
               </td>
+			  <td>
+				<span class="form-field">
+				<label for="Services">Which of our services do you require:</label>
+				<select name="Services" id="Services">
+				<option value="Web">Web Design</option>
+				<option value="App">App Design</option>
+				<option value="Consulting">Consulting</option>
+				<option value="Logo">Logo Design</option>
+                </span>
+				</select>
+				</td>
             </tr>
             <tr>
               <td>
