--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
       </div>
     </div>
     <div class="footer">I AM A FOOTER!!!</div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
+    <script src="loader.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js"></script>
     <script src="drop.js"></script>
-    <script src="goo.js"></script>
+    <script src="goo.js"></script>-->
   </body>
 </html>
